Code cleanup and Android sanitation 1/3